Exclude the GDALParser
As per discussion in https://issues.apache.org/jira/browse/TIKA-3812, we can exclude this parser.

Note that it's probably needed to be added back but with some mie-types exclusions.